tests/should_fail/logic_alias/alias_to_program_function.rs
extern crate creusot_std;

use creusot_std::prelude::*;

pub fn greater_than(a: Int, b: Int) -> bool {
    a > b
}

#[logic_alias(greater_than(a@, b@))]
pub fn greater(a: i64, b: i64) -> bool {
    a > b
}
