tests/should_fail/logic_alias/alias_to_program_function.stderr
error: Only logic functions can be aliased
 --> alias_to_program_function.rs:9:1
  |
9 | #[logic_alias(greater_than(a@, b@))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `greater_than` is not a logic function
  = note: this error originates in the attribute macro `logic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

